[package]
name = "hit_course"
version = "0.6.0"
edition = "2021"

[dependencies]
anstyle = "1.0.10"
base64 = "0.22.1"
clap = { version = "4.5.32" , features = ["derive"] }
colored = "3.0.0"
openssl = { version = "0.10.71", features = ["vendored"] }
rand = "0.9.0"
reqwest = { version = "0.12.15", features = ["json", "cookies"] }
scraper = "0.23.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = {version = "1.44.1", features = ["full"]}
